FFP-347: fixes visibility on mobile devices

--- a/src/legacy/PriceHistory/PriceHistory.module.scss
+++ b/src/legacy/PriceHistory/PriceHistory.module.scss
@@ -1,10 +1,16 @@
 @import '../../style/colors';
+@import '../../style/media-queries';
 
 .container {
   font-size: 12px;
   background: $white;
   padding: 10px;
   margin-bottom: 10px;
+  display: none;
+
+  @include respond-above(sm) {
+    display: block;
+  }
 }
 
 .bold {
